Use Grunt to compile Sass; Add LiveReload
Add new Gruntfile

Remove Compass from workflow

Add live reload script to index.html

Remove compiled js from source control

Remove compiled js from source control

Add build task to Gruntfile

Rename index.js

Remove compiled js from source control

--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
             g.src='//www.google-analytics.com/ga.js';
             s.parentNode.insertBefore(g,s)}(document,'script'));
         </script>
+	<script src="http://127.0.0.1:35729/livereload.js?ext=Chrome&amp;extver=2.0.9"></script>
     </body>
 </html><!-- by @jshawl -->
